Remember scroll position in session

Unlike the cursor position, the scroll position is not saved in a
session, which means the cursor will be placed at the top of the view
instead of wherever it was last located.

Save the last scroll position in a config entry as well.

BUG: 468109